# LLM-detect

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  interface.py  interface_highlighted.py  pyproject.toml  requirements.txt  settings.py  settings.toml  settings_logger.toml  svm_baseline.py
llm_detect/: interface.py  interface_highlighted.py  models.py  processing.py  settings.py  svm_baseline.py  text_models.py  utils.py
llm_detect/inference/: __init__.py  svm_baseline.py  svm_detector.py
llm_detect/inference/binoculars/: __init__.py  binoculars.py  detector_base.py  utils.py  wrapper.py
static/: index.html  main.js
