[tool.poetry]
name = "llm-detect"
version = "0.1.0"
description = ""
authors = ["Enrique Manjavacas <enrique.manjavacas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "4.36.1"
fastapi = "0.111.0"
lingua-language-detector = "^2.0.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.4"
pydantic-settings = {extras = ["toml"], version = "^2.3.3"}
pysbd = "^0.3.4"
scikit-learn = "^1.5.0"
skops = "^0.9.0"
toml = "^0.10.2"
tqdm = "^4.66.4"
uvicorn = "^0.30.1"
tomli = "^2.0.1"
transformers = "^4.41.2"
torch = "2.2.2"
accelerate = "^0.31.0"
sentencepiece = "^0.2.0"
protobuf = "^5.27.1"
gradio-rich-textbox = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
